test/negative/tuple_non_tuple.mut
# ERROR: cannot destructure non-tuple type
x: i64 = 42
a, b := x
